==========================================
08/05/2025:

## Add:

## Update:
- POST /services: Add avatar, hidden field

==========================================
28/04/2025:

## Booking:
- Remove GET /stores/{storeId}/customers
- Remove GET /stores/{storeId}/teams
- GET /stores/{storeId}/services: Add search in query
- GET /stores/{storeId}/v2/teams: Add search in query
- GET /stores/{storeId}/v2/customers: Add search in query
## Profile:
- GET /accounts:
+ Add search, role query
+ Change pagination response

==========================================
27/04/2025:

## Booking:
- Remove schema TeamMemberSmall and replace it with Team schema (new schema for Team)
- Affected endpoints:
+ /stores/{storeId}/services (in members array)
+ /stores/{storeId}/teams

==========================================
24/04/2025:
## Booking:
UPDATE:
- GET /stores/{storeId}/v2/customers => Get all account IDs of booked (update from old API)
ADD:
- GET /stores/{storeId}/anonymous-customers => Get all anonymous customer (full information, just don't have the accountId)
- GET /stores/{storeId}/customers/{accountId} => Get all booking profile of the customer (group by accountId)
- POST /anonymous-customers => Add an anonymous profile for booking anonymously

==========================================
22/04/2025:

## Booking >> Teams:
(*) Migrate:
- GET /stores/{storeId}/v2/teams => Change TeamMemberSmall schema to new Team schema and add Pagination
(*) Added:
- CMS Role schema: Admin = 1, Manager = 2, Employee = 3
- Team schema, different from old TeamMemberSmall schema
- POST /teams => Creates a Team of the store
- GET /teams/{teamId} => Get a Team
- DELETE /teams/{teamId} => Remove Team by team id
- PATCH /teams/{teamId}/role => Update team's role
- PATCH /teams/{teamId}/work-hours => Update team's workHours (Mon - Sun)
- GET /teams/{teamId}/time-off => Get team's all time-off
- POST /teams/{teamId}/time-off => Add time-off for a team