@@ -1,4 +1,9 @@
 ==========================================
+21/05/2025:
+- connect, disconnect
+- /stores/{storeId}/accounts/many
+
+==========================================
 08/05/2025:
 
 ## Add:
